# keyboard_light_razer_chroma_easy_manipulation_library

./: .gitignore  LICENSE  README.md  pyproject.toml
src/razer_chroma_keyboard/: __init__.py  __main__.py  api.py
