[project]
name = "razer_chroma_keyboard"
version = "0.0.1"
authors = [
  { name="Jean Oustry", email="author@example.com" },
]
description = "Razer chroma compatible keyboard backlight driving library."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
]
dependencies=["requests", "pynput", "click"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"